# schocken-auth-server

./: Cargo.toml  LICENSE.md  README.md  build_deps.rs
doc/dev/: README.md  data.md
integrations/docker/: Dockerfile
integrations/docker-compose-deploy/: .env  docker-compose.yml
integrations/docker-compose-unittest/: .env  docker-compose.yml
migrations/: 20210317215820_base.sql  20210317215821_day0_token.sql  20210317215822_user_id.sql  20210317215823_credentials.sql  20210317215824_user_profile.sql  20210317215825_role_binding.sql  20210317215826_session.sql
src/: main.rs
src/auth_hexagon/: auth_config_env_adapter.rs  auth_config_port.rs  auth_error_mapping.rs  auth_service_domain.rs  auth_service_mock.rs  auth_service_port.rs  auth_service_rest_adapter.rs  auth_store_mock.rs  auth_store_pg_adapter.rs  auth_store_port.rs  auth_types.rs  mod.rs
src/auth_hexagon/auth_service_domain/: test_csrf.rs  test_session.rs
src/auth_hexagon/auth_service_rest_adapter/: endpoint_auth.rs  endpoint_csrf.rs  endpoint_day0.rs  rest_api_test.rs
src/auth_hexagon/auth_store_pg_adapter/: pg_error_mapping.rs  pg_queries.rs  pg_queries_credential.rs  pg_queries_profile.rs  pg_queries_session.rs  test_utils.rs
