[package]
name = "schocken-auth-server"
version = "0.1.0"
authors = ["Volker Kleinfeld <31014648+vfeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "schocken-auth-server"
path = "src/main.rs"

[[bin]]
name = "build_deps"
path = "build_deps.rs"

[dependencies]
dotenv = "0.15.0" 
async-trait = "0.1.47"
time = "0.2.25"
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls" , "time" ,"macros", "postgres", "migrate",] }
include_dir = "0.6.0"
log = "0.4.14"
env_logger = "0.8.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-web = {version = "4.0.0-beta.4", features = [ "rustls" ] }
serde = "1.0.124"
serde_json = "1.0.64"
sodiumoxide = "0.2"
jsonwebtoken = "7"
getrandom = "0.2"
base64 = "0.13"
futures-util = "0.3"
actix-cors = "0.6.0-beta.1"
rustls = "0.19"

[dev-dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
mock-it = "0.3.0"

